[package]
name = "typed-arena"
version = "1.3.0"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
license = "MIT"
description = "The arena, a fast but limited type of allocator"
documentation = "https://docs.rs/typed-arena"
repository = "https://github.com/SimonSapin/rust-typed-arena"
categories = ["memory-management"]

[lib]
name = "typed_arena"
path = "src/lib.rs"
doctest = false
