[package]
name = "typed-arena"
version = "1.4.1"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
license = "MIT"
description = "The arena, a fast but limited type of allocator"
documentation = "https://docs.rs/typed-arena"
repository = "https://github.com/SimonSapin/rust-typed-arena"
categories = ["memory-management", "no-std"]
keywords = ["arena"]

[lib]
name = "typed_arena"
path = "src/lib.rs"

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.2.4"

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false

[profile.bench]
debug = true
